# 3dModelEditor-OpenGL

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/cppcode/: canvas.cpp  canvas.h  main.cpp  shader.h
src/shaders/: mesh.frag  mesh.vert
